# brODErspp

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/general/: BasicOutput.cpp  BasicOutput.h  CMakeLists.txt  Data.h  SetupProblem.cpp  SetupProblem.h  SetupProperties.cpp  SetupProperties.h  Solution.h  Solver.cpp  Solver.h  main.cpp
src/larsen/: CMakeLists.txt  DataLarsen1T.cpp  DataLarsen1T.h  DataLarsenTTv.cpp  DataLarsenTTv.h  Larsen1T.cpp  Larsen1T.h  Larsen1T_BACKUP.cpp  LarsenTTv.cpp  LarsenTTv.h  SetupLarsen1T.cpp  SetupLarsen1T.h  SetupLarsenTTv.cpp  SetupLarsenTTv.h
src/shocking/: CMakeLists.txt  DataShocking1T.cpp  DataShocking1T.h  DataShockingNT.cpp  DataShockingNT.h  GEORGE_RankineHugoniot1T.cpp  GEORGE_RankineHugoniot1T.h  Mesh.cpp  Mesh.h  OLD_RankineHugoniot1T.cpp  README_shocking  RankineHugoniot1T.cpp  RankineHugoniot1T.h  SetupShocking1T.cpp  SetupShocking1T.h  SetupShockingNT.cpp  SetupShockingNT.h  Shocking1T.cpp  ShockingTTv.cpp  ShockingTTv.h
tools/: README
tools/multilarsen/streamlines_paraview_converter/: MAIN_all_streamlines_export.m  README  octaStreamlineConverterInterp.m
tools/multilarsen/streamlines_paraview_converter/output_streamlines/: streamline_00000  streamline_00001  streamline_00002  streamline_00003  streamline_00004  streamline_00005  streamline_00006  streamline_00007  streamline_00008  streamline_00009  streamline_00010  streamline_00011  streamline_00012  streamline_00013  streamline_00014  streamline_00015  streamline_00016
tools/multilarsen/streamlines_paraview_converter_METEOROID/: MAIN_all_streamlines_export.m  MAIN_one_streamline_export.m  README  initial.csv  octaFileTester.m  octaStreamlineConverterInterpExtenderFitter_AIR11.m  octaStreamlineConverterInterpExtenderFitter_constRhoU_AIR11.m  octaStreamlineConverterInterpExtenderFitter_constRhoU_copy_AIR11.m  octaStreamlineConverterInterpExtender_AIR11.m  octaStreamlineConverterInterpExtender_AIR11_old.m  octaStreamlineConverterInterp_AIR11.m  venti_streamlines.csv
tools/multilarsen/streamlines_paraview_converter_METEOROID/output_streamlines/: streamline_00000  streamline_00001  streamline_00002  streamline_00003  streamline_00004  streamline_00005  streamline_00006  streamline_00007  streamline_00008  streamline_00009  streamline_00010  streamline_00011  streamline_00012  streamline_00013  streamline_00014  streamline_00015  streamline_00016  streamline_00017  streamline_00018  streamline_00019  streamline_00020  streamline_00021  streamline_00022  streamline_00023  streamline_00024  streamline_00025
tools/multilarsen/testcase_creator/: README  octaSimpleStreamlinesGeneratorGradT.m  octaSimpleStreamlinesGeneratorGradXi.m
tools/multilarsen/testcase_creator/diffusion_vs_errorfunction/: data.csv  diff_vs_erf.m
tools/multilarsen/testcase_creator/initial_solution/: FINAL_vertExt.csv  octaExtendedStreamlinesGenerator.m  octaFitTemperatureSpecies.m  octaGenerateInitialSol.m
tools/multilarsen/testcase_creator/initial_solution/streamlines/: str_00000  str_00001  str_00002  str_00003  str_00004  str_00005  str_00006  str_00007  str_00008  str_00009  str_00010  str_00011  str_00012  str_00013  str_00014  str_00015  str_00016  str_00017  str_00018  str_00019  str_00020  str_00021  str_00022  (+32 more)
tools/multilarsen/testcase_creator/streamlines/: str_00000  str_00001  str_00002  str_00003  str_00004  str_00005  str_00006  str_00007  str_00008  str_00009  str_00010  str_00011  str_00012  str_00013  str_00014  str_00015  str_00016  str_00017  str_00018  str_00019  str_00020  str_00021  str_00022  str_00023  str_00024  str_00025  str_00026  str_00027  str_00028  str_00029
verification/: README
verification/LARSEN/shock_1D_air11_1T/: OCTACONVERT.m  README  larsen_input.in  octaveResultsPlotter.m  outpL  run_testcase.sh  shockair.in
verification/LARSEN/shock_1D_air11_TTv/: README  TMP  larsen_input.in  octaveResultsPlotter.m  outpL
verification/LARSEN/stagline_air5_1T_NS/: README  larsen_input.in  octaveResultsPlotter.m  outpL  run_testcase.sh  stagline_input_file
verification/LARSEN/stagline_air5_1T_euler/: .larsen_input.in.swp  README  larsen_input.in  octaTMP.m  octaveResultsPlotter.m  run_testcase.sh  shocking_input
verification/LARSEN/stagline_air5_1T_euler/Stagline_case/: first_test_input_data  fort.10  mesh.tec
verification/LARSEN/stagline_air5_TTV_euler/: README  larsen_input.in  octaTMP.m  octaveResultsPlotter.m
verification/LARSEN/stagline_air5_TTV_euler/mutation++_files/: air5.xml
verification/LARSEN/streamline_2D_argon/: README  argon_only.xml  larsen_input.in  octaveResultsPlotter.m  outpL  run_testcase.sh
verification/Shocking/OLD/old_shocking_fortran/: README
verification/Shocking/OLD/stagline_air5_TTv/: README  octave-workspace  octaveResultsPlotter.m  shocking_input  stagline_input
verification/Shocking/fire_II_panesi_johnston/: README  octaveResultsPlotterAll.m  run_testcase.sh  shocking_input
verification/Shocking/stagline_air5_1T_euler/: README  octave-workspace  octaveResultsPlotter.m  shocking_input  stagline_input
verification/Shocking/stagline_air5_1T_euler/Stagline_case/: cfl  first_test_transp_fluxes.dat~  input
verification/Shocking/stagline_air5_TTv_euler/: .stagline_input.swp  README  air5.xml  air5_mechanism.xml  octave-workspace  octaveResultsPlotter.m  run_testcase.sh  shocking_input
